tests/conformance/negative/bad_macro_arity.afr
macro shout(msg)
    say msg
end
shout!("a")
shout!("b", "c")
